[package]
name = "hello-cef-one-shoot-claude"
version = "0.1.0"
edition = "2021"

[dependencies]
wry = "0.50"
tao = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
tiny_http = "0.12"
base64 = "0.22"
screenshots = "0.8"
image = "0.25"
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
urlencoding = "2.1"
